--- a/templates/blocks/css_variables.twig
+++ b/templates/blocks/css_variables.twig
@@ -1,7 +1,7 @@
 {% spaceless %}
 style="
 	{% for key,value in css_variables %}
-		--{{ key }}: {{ value }};
+		--{{ key|trim('--', 'left') }}: {{ value|raw }};
 	{% endfor %}
 	"
 {% endspaceless %}
