--- a/templates/css-variables.twig
+++ b/templates/css-variables.twig
@@ -1,7 +1,7 @@
 <style>
 	:root {
 		{% for key, value in css_vars %}
-			--{{ key }}: {{ value }};
+			--{{ key|trim('--', 'left') }}: {{ value }};
 		{% endfor %}
 	}
 </style>
