--- a/assets/src/scss/layout/_page-header.scss
+++ b/assets/src/scss/layout/_page-header.scss
@@ -23,23 +23,25 @@
 }
 
 .page-header {
-  color: $grey-80;
-  padding-top: $n90;
-  margin-bottom: $space-md;
+  _-- {
+    color: $grey-80;
+    padding-top: $n90;
+    margin-bottom: $space-md;
+
+    @include medium-and-up {
+      padding-top: 104px;
+    }
+
+    @include large-and-up {
+      padding-top: 144px;
+      margin-bottom: $space-lg;
+    }
+
+    @include x-large-and-up {
+      padding-top: 144px;
+    }
+  }
   position: relative;
-
-  @include medium-and-up {
-    padding-top: 104px;
-  }
-
-  @include large-and-up {
-    padding-top: 144px;
-    margin-bottom: $space-lg;
-  }
-
-  @include x-large-and-up {
-    padding-top: 144px;
-  }
 
   &.page-header-hidden {
     padding: 0 !important;
@@ -56,7 +58,7 @@
     }
   }
 
-  h3 {
+  h3 _-- {
     margin-bottom: 20px;
 
     @include medium-and-up {
