PLANET-6156: Split Spreadsheet block scripts
Ref: https://jira.greenpeace.org/browse/PLANET-6156

Split Spreadsheet scripts to only be loaded when a block is present on the page.

--- a/assets/src/styles/blocks/Spreadsheet/SpreadsheetStyle.scss
+++ b/assets/src/styles/blocks/Spreadsheet/SpreadsheetStyle.scss
@@ -1,3 +1,8 @@
+@import "../../master-theme/assets/src/scss/base/variables";
+@import "../../master-theme/assets/src/scss/base/colors";
+@import "../../master-theme/assets/src/scss/base/mixins";
+@import "../../master-theme/assets/src/scss/base/fonts";
+
 .block-spreadsheet {
   display: inline-block;
   margin-top: $space-xs;
