A11y: Address accessibility of spreadsheet block
- Ensure column sorting is tab-accessible by enclosing the header text
  and sort icon in a button. Note that I am keeping the rest of the
  table header clickable, since this will ensure a larger click area.
- Use the table header text as the title
- Add a scope attribute

--- a/assets/src/styles/blocks/Spreadsheet/SpreadsheetStyle.scss
+++ b/assets/src/styles/blocks/Spreadsheet/SpreadsheetStyle.scss
@@ -44,6 +44,13 @@ table.spreadsheet-table {
       background-color: $table-header-grey;
       border-bottom-color: $table-header-grey;
     }
+
+    button {
+      background-color: inherit;
+      color: inherit;
+      border: none;
+    }
+
     color: $white;
     border-bottom: 1px solid;
     cursor: pointer;
