--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -8,6 +8,10 @@
 
 	{% include 'blocks/google_tag_manager.twig' %}
 
+	{% if hubspot_active %}
+		{% include 'head/hubspot.twig' %}
+	{% endif %}
+
 	{% include 'blocks/p4_structured_data.twig' %}
 
 	<link rel="pingback" href="{{ site.pingback_url }}">
