--- a/templates/tease-taxonomy-post.twig
+++ b/templates/tease-taxonomy-post.twig
@@ -20,6 +20,11 @@
 						{{ post.get_page_types.0.name|e('wp_kses_post')|raw }}
 				</a>
 			{% endif %}
+
+			{% if ( (post.page_types is not empty) and post.tags ) %}
+				<span class="tag-wrap-bullet" aria-hidden="true">&#8226;</span>
+			{% endif %}
+
 			{% if (post.tags) %}
 				<div class="tag-wrap tags">
 					{% for tag in post.tags %}
