PLANET-5868: Make table caption styles same as image caption
Previously, the table and the image captions has different styles which made them look inconsistent. This change will make the table caption look the same as the image caption

--- a/assets/src/styles/blocks/core-overrides/Table.scss
+++ b/assets/src/styles/blocks/core-overrides/Table.scss
@@ -46,6 +46,15 @@
     }
   }
 
+  // Table caption
+  figcaption {
+    text-align: center;
+    font-size: $font-size-xxs;
+    font-family: $roboto;
+    color: $grey-60;
+    line-height: 1.4;
+  }
+
   &.is-style-stripes table {
     // Grey background (defaut)
     tr:nth-child(odd) {
