PLANET-5757 Add image title attribute
Previously, the global.js adds the image title attribute with alt text. To remove jQuery from global.js, drop the gobal.js and add img title at source.

--- a/templates/blocks/campaign_covers.twig
+++ b/templates/blocks/campaign_covers.twig
@@ -36,7 +36,7 @@
 								aria-label="{{ __( 'Check our campaign about ' ~ tag.name, 'planet4-blocks') }}">
 									<div class="thumbnail-large">
 										{% if ( tag.image[0] ) %}
-											<img src="{{ tag.image[0] }}" alt="{{ tag.alt_text }}">
+											<img src="{{ tag.image[0] }}" alt="{{ tag.alt_text }}" title="{{ tag.alt_text }}">
 										{% endif %}
 										<span class="yellow-cta"><span aria-label="hashtag">#</span>{{ tag.name }}</span>
 									</div>
