--- a/templates/blocks/carousel_header_full-width-classic.twig
+++ b/templates/blocks/carousel_header_full-width-classic.twig
@@ -31,7 +31,8 @@
 										sizes="{{ slide.image_sizes }}"
 										data-background-position="{{ slide.focus_image }}"
 										loading="lazy"
-										alt="{{ slide.image_alt  }}">
+										alt="{{ slide.image_alt }}"
+										title="{{ slide.image_alt }}">
 
 									<div class="carousel-caption">
 										<div class="caption-overlay"></div>
