--- a/templates/tease-author.twig
+++ b/templates/tease-author.twig
@@ -1,13 +1,5 @@
 <li id="result-row-{{ post.ID }}" class="d-flex search-result-list-item">
-	{% set img_title = fn('esc_attr', post.thumbnail.alt|default( post.title ) )|raw %}
-	<img
-		class="d-flex search-result-item-image"
-		src="{{ post.thumbnail.src('thumbnail') }}"
-		alt="{{ img_title }}"
-		title="{{ img_title }}"
-		data-ga-category="Articles List"
-		data-ga-action="Image"
-		data-ga-label="n/a" />
+	{% include "blocks/image.twig" with {post:post, dummy_thumbnail:dummy_thumbnail} %}
 
 	<div id="tease-{{ post.ID }}" class="search-result-item-body tease tease-{{ post.post_type }}">
 		<div class="search-result-tags top-page-tags">
