--- a/templates/single.twig
+++ b/templates/single.twig
@@ -43,6 +43,10 @@
 						</div>
 					{% endif %}
 
+					{% if ( post.issues_nav_data and post.tags ) %}
+						<span class="tag-wrap-bullet" aria-hidden="true">&#8226;</span>
+					{% endif %}
+
 					{% if (post.tags) %}
 						<div class="tag-wrap tags">
 							{% for tag in post.tags %}
