PLANET-6194: Adapt 404 search icon to RTL
SVG icon is stuck on the right side of the search input on RTL sites.
Adding the same type of rule as the navbar search icon fixes the issue.

--- a/assets/src/scss/pages/_404.scss
+++ b/assets/src/scss/pages/_404.scss
@@ -35,6 +35,11 @@
         position: absolute;
         right: 6px;
         top: 13px;
+
+        html[dir="rtl"] & {
+          left: 6px;
+          right: auto;
+        }
       }
     }
 
