Add author image on single post
This commit adds an author image to posts. Changes are made in single.twig and necessary CSS tweaks to images to have round corners.

--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -119,6 +119,11 @@
         margin-left: 20px;
       }
 
+      .author-pic {
+        border-radius: 50%;
+        object-fit: cover;
+      }
+
       &:after {
         content: "\2022";
         pointer-events: none;
