--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -14,6 +14,8 @@
 
 	{% include 'blocks/p4_structured_data.twig' %}
 
+	{% include 'service-worker.twig' %}
+
 	<link rel="pingback" href="{{ site.pingback_url }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
