--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -13,7 +13,7 @@
 @import "blocks/File";
 @import "blocks/Happypoint";
 @import "blocks/Media";
-@import "blocks/Socialmedia";
+@import "blocks/SocialMedia";
 @import "blocks/SocialMediaCards";
 @import "blocks/SplitTwoColumns";
 @import "blocks/Submenu";
