PLANET-4460 Set Social media block min and max width to Facebook Page Plugin
- Use 240px for smaller screens
- Use 500px for larger screens

--- a/assets/src/styles/blocks/Socialmedia.scss
+++ b/assets/src/styles/blocks/Socialmedia.scss
@@ -10,5 +10,29 @@
         margin-right: auto !important;
       }
     }
+
+    &-facebook {
+      border: none;
+      overflow: hidden;
+      height: 500px;
+
+      &--small {
+        width: 240px;
+        display: block;
+
+        @include medium-and-up {
+          display: none;
+        }
+      }
+
+      &--large {
+        width: 500px;
+        display: none;
+
+        @include medium-and-up {
+          display: block;
+        }
+      }
+    }
   }
 }
