TMP quick workaround to avoid crashes

--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html {{ fn('language_attributes', 'html') }} data-base="{{ data_nav_bar.home_url }}">
 <head>
+	<script>window.wp = {}</script>
 	<meta charset="{{ site.charset }}">
 	{% include 'blocks/title.twig' %}
 
